[package]
name = "brize_router"
version = "0.1.0"
edition = "2021"
authors=["Jonathan Karrer <karrerjon@gmail.com>"]
description = "Light router module for Brize"
license = "MIT/Apache-2.0"
repository = "https://github.com/xbrize/brize_router"
readme = "README.md"
keywords = ["http"]
categories = ["software"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
